--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -74,6 +74,10 @@ input {
   border: 1px solid $grey-medium-dark;
 }
 
+button {
+  margin-left: 10px;
+}
+
 .fadeInBlock {
     opacity:0;
 }
@@ -98,9 +102,29 @@ input {
     padding-right: 15px !important;
   }
 }
+.padding-right-big {
+  @media(min-width:767px) {
+    padding-right: 45px !important;
+  }
+}
 .padding-left-big {
   @media(min-width:767px) {
     padding-left: 45px !important;
+  }
+}
+.padding-left-huge {
+  @media(min-width:767px) {
+    padding-left: 60px !important;
+  }
+}
+.margin-right-standard {
+  @media(min-width:767px) {
+    margin-right: 30px !important;
+  }
+}
+.margin-right-half {
+  @media(min-width:767px) {
+    margin-right: 15px !important;
   }
 }
 
