--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -14,6 +14,11 @@ skills {
     color: $grey-dark;
     height: 42px;
   }
+  .buttons {
+    margin-top: 20px;
+    overflow: hidden;
+    padding-right: 0px;
+  }
   .btn {
     font-size: 18px !important;
   }
