--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -18,6 +18,9 @@ article {
 
 .container-standard{
   @include container-dimensions(1);
+  @media(max-width: 767px) {
+    padding: 0px 10px;
+  }
 }
 .container-wide{
   @include container-dimensions(1.1);
@@ -78,12 +81,23 @@ button {
   margin-left: 10px;
 }
 
+.mobile-center {
+  @media(max-width: 767px) {
+    text-align: center;
+  }
+}
+
 .fadeInBlock {
     opacity:0;
 }
 
 .no-padding {
   @media(min-width:767px) {
+    padding: 0px !important;
+  }
+}
+.no-mobile-padding {
+  @media(max-width:767px) {
     padding: 0px !important;
   }
 }
