--- a/scss/_xeditable.scss
+++ b/scss/_xeditable.scss
@@ -29,6 +29,7 @@
   @include border-radius(4px);
   padding: 8px 0px 8px 5px;
   border: 1px solid $grey-medium-dark;
+  height: auto;
 }
 
 .editable-buttons {
